# retweaks

./: .gitignore  README.md
custom/: bashfun.sh
custom/splash-cycler/: 01-install.sh  99-uninstall.sh  README.md  custom-splash-screens.service  custom-splash-screens.timer  custom-suspend-screen.service  splash-cycler.sh  suspend-screen-cycler.sh
custom/suspend-screen-cycler/: 01-install.sh  99-uninstall.sh  custom-suspend-screen.service  custom-suspend-screen.timer  suspend-screen-cycler.sh
host/remass/: README.md  filebrowsing.py  requirements.txt  sshtests.py
host/template-scripting/: GardeningP.inc.json  GridRuler.json.inc  GridRulerLS.json.inc  Print3dP.inc.json  TodoListP.inc.json  build_templates.sh  install_templates.py  install_templates.sh  scripted_svg_templates.py  scripted_templates.py
host/whiteboard/: install_rmview_host.sh
ppd/: remarkable-pdf-printer.drv
printer-ppd/: remarkable-pdf-printer.ppd
reprint/: CMakeLists.txt  README.md
reprint/cmake/: FindLibHttpServer.cmake
reprint/src/: ippdemo.cpp
splash-screens/: .gitignore
templates/: ExamProtocol.inc.json  ExamProtocolP.inc.json  Grid5mm.inc.json  Grid5mm.json.inc  GridRulerP.inc.json  build_templates.sh  install_templates.py  install_templates.sh  scripted_templates.py
